--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,6 +27,10 @@ jobs:
               with:
                   node-version: "16"
 
+            - name: Install Node.js dependencies
+              run: |
+                  npm install -g crypto-js
+
             - name: Run tests
               run: |
                   php test.php
