--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,7 +29,7 @@ jobs:
 
             - name: Install Node.js dependencies
               run: |
-                  npm install -g crypto-js
+                  npm install crypto-js --save --working-dir=encryption
 
             - name: Run tests
               run: |
