--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,6 +43,14 @@ jobs:
                   mkdir lib
                   mv json-20240303.jar lib/org.json.jar
 
+            - name: Install Dotnet (C#)
+              uses: actions/setup-dotnet@v1
+              with:
+                  dotnet-version: "6.0.x"
+
+            - name: Install Dotnet Script
+              run: dotnet tool install -g dotnet-script
+
             - name: Run tests
               run: |
                   php test.php
