--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -52,9 +52,14 @@ jobs:
               run: dotnet tool install -g dotnet-script
 
             - name: Install Ruby
-              uses: actions/setup-ruby@v1
+              uses: ruby/setup-ruby@v1
               with:
-                  ruby-version: "3.0"
+                  ruby-version: "3.3"
+
+            - name: Install Go
+              uses: actions/setup-go@v2
+              with:
+                  go-version: "1.22"
 
             - name: Run tests
               run: |
